[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/Sniglet Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameOverUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="GameOverUI" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 461.0
margin_top = 248.0
margin_right = 818.0
margin_bottom = 472.0

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 357.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 357.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 350.0
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_top = 15.0
margin_right = 169.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "SCORE
N"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 173.0
margin_top = 15.0
margin_right = 343.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "BEST
N"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 357.0
margin_bottom = 224.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 176.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 36.0
margin_top = 20.0
margin_right = 139.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "GO AGANE"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 357.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
margin_left = 28.0
margin_top = 20.0
margin_right = 148.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
